--- a/src/assets/styles/sections/product.scss.liquid
+++ b/src/assets/styles/sections/product.scss.liquid
@@ -22,6 +22,8 @@ $inputNumberWidth: $fontBaseSize*3;
       -webkit-appearance: none;
       margin: 0;
     }
+    // Hide the 'spinner' in Firefox
+    -moz-appearance: textfield;
   }
   .single-option-selector {
     width: 100%;
