--- a/src/templates/cart.liquid
+++ b/src/templates/cart.liquid
@@ -9,60 +9,59 @@
   <h1>{{ 'cart.title' | t }}</h1>
 
   <form id="CartPage" action="/cart" method="post" novalidate>
-    <div class="row l-table m-table s-hide margin-bottom-2x" id="CartHeader">
-      <div class="column l5 m5">{{ 'cart.product' | t }}</div>
-      <div class="column l3 m2">{{ 'cart.price' | t }}</div>
-      <div class="column l2 m3">{{ 'cart.quantity' | t }}</div>
-      <div class="column l2 m2 l-right m-right">{{ 'cart.subtotal' | t }}</div>
+    {%- comment -%}
+      Table heading row
+    {%- endcomment -%}
+    <div class="row l-table m-hide s-hide margin-bottom-4x" id="CartHeader">
+      <div class="column l5">{{ 'cart.product' | t }}</div>
+      <div class="column l3">{{ 'cart.price' | t }}</div>
+      <div class="column l2">{{ 'cart.quantity' | t }}</div>
+      <div class="column l2 right">{{ 'cart.subtotal' | t }}</div>
     </div>
 
     {% for item in cart.items %}
-      <div class="row l-table m-table">
-        <div class="column l5 m3 s12">
-          <p>
-            <a href="{{ item.url }}">
-              {% if item.image != blank %}
-                <div class="margin-right-2x" style="float:left">
-                  {% include 'responsive-image' with
-                    image: item.image,
-                    width: 80,
-                    max_width: 80,
-                    max_height: 80
-                  %}
-                </div>
-              {% endif %}
-
-              <span class="h4">{{ item.product.title }}</span><br>
-              {{ item.variant.title }}
-            </a>
-            {% comment %}
-              Optional, loop through custom product line items if available
-              For more info visit http://docs.shopify.com/support/your-store/products/how-do-I-collect-additional-information-on-the-product-page-Like-for-a-monogram-engraving-or-customization
-            {% endcomment %}
-            {% assign propertySize = item.properties | size %}
-            {% if propertySize > 0 %}
-              {% for property in item.properties %}
-                {% assign first_character_in_key = property.first | truncate: 1, '' %}
-                {% unless property.last == blank or first_character_in_key == '_' %}
-                  <br>
-                  {{ property.first }}:
-                  {% comment %}
-                    Check if there was an uploaded file associated
-                  {% endcomment %}
-                  {% if property.last contains '/uploads/' %}
-                    <a href="{{ property.last }}">{{ property.last | split: '/' | last }}</a>
-                  {% else %}
-                    {{ property.last }}
-                  {% endif %}
-                {% endunless %}
-              {% endfor %}
+      <div class="row l-table margin-bottom-4x">
+        <div class="column l5 m12 s12 m-margin-bottom-2x s-margin-bottom-2x">
+          <a href="{{ item.url }}">
+            {% if item.image != blank %}
+              <img src="{{ item.image | img_url: '50x80' }}"
+                   srcset="{{ item.image | img_url: '50x80' }} 1x,
+                           {{ item.image | img_url: '50x80', scale: 2 }} 2x"
+                   alt="{{ item.title }}"
+                   class="margin-right-2x"
+                   style="float:left">
             {% endif %}
-          </p>
+            <span class="h5">{{ item.product.title }}</span><br>
+            {{ item.variant.title }}
+          </a>
+          {%- comment -%}
+            Optional, loop through custom product line items if available
+            For more info visit http://docs.shopify.com/support/your-store/products/how-do-I-collect-additional-information-on-the-product-page-Like-for-a-monogram-engraving-or-customization
+          {%- endcomment -%}
+          {% assign propertySize = item.properties | size %}
+          {% if propertySize > 0 %}
+            {% for property in item.properties %}
+              {% assign first_character_in_key = property.first | truncate: 1, '' %}
+              {% unless property.last == blank or first_character_in_key == '_' %}
+                <br>
+                {{ property.first }}:
+                {%- comment -%}
+                  Check if there was an uploaded file associated
+                {%- endcomment -%}
+                {% if property.last contains '/uploads/' %}
+                  <a href="{{ property.last }}">{{ property.last | split: '/' | last }}</a>
+                {% else %}
+                  {{ property.last }}
+                {% endif %}
+              {% endunless %}
+            {% endfor %}
+          {% endif %}
+
         </div>
-        <div class="column l3 m2 s-hide">
+        <div class="column l3 m-hide s-hide">
           {{ item.price | money_with_currency }}
         </div>
-        <div class="column l2 m3 s12">
+        <div class="column l2 m6 s6">
           <label for="Quantity" class="visually-hidden">
             {{ 'product.quantity' | t }}
           </label>
@@ -78,7 +77,7 @@
                data-change="1">&#43;</a>
           </div>
         </div>
-        <div class="column l2 m2 right s-hide">
+        <div class="column l2 m6 s6 right">
           {% if item.total_discount > 0 %}
             <s>{{ item.original_line_price | money_with_currency }}</s>
             <p class="no-margin">{{ item.message }}</p>
@@ -93,19 +92,19 @@
       </div>
     {% endfor %}
 
-    <div class="row margin-top-4x">
-      <div class="column l6 m6 s12">
+    <div class="row padding-top-2x">
+      <div class="column l6 m5 s12">
         {% if show_notes %}
           <label for="CartSpecialInstructions" class="block">
             {{ 'cart.notes' | t }}
           </label>
-          <textarea class="wide" name="note" id="CartSpecialInstructions">
-            {{ cart.note }}
+          <textarea name="note" id="CartSpecialInstructions" class="margin-bottom-2x">
+            {{- cart.note -}}
           </textarea>
         {% endif %}
       </div>
 
-      <div class="column l6 m6 s12 l-right m-right">
+      <div class="column l6 m7 s12 right s-left">
         <p>
           <span class="cart-total-heading">{{ 'cart.total' | t }}</span>
           <span class="h3">{{ cart.total_price | money_with_currency }}</span>
@@ -118,7 +117,7 @@
           </p>
         {% endif %}
 
-        <p class="margin-bottom-1x">
+        <p class="margin-bottom-2x">
           <i>{{ 'cart.shipping_at_checkout' | t }}</i>
         </p>
 
