--- a/src/templates/page.contact.liquid
+++ b/src/templates/page.contact.liquid
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="column l6 m12 s12">
-    <div id="ContactForm">
+    <div class="form-container wide">
 
       {% form 'contact' %}
         {{ form.errors | default_errors }}
