--- a/src/snippets/pagination.liquid
+++ b/src/snippets/pagination.liquid
@@ -5,7 +5,7 @@
     {% if paginate.previous %}
       <li>
         <a href="{{ paginate.previous.url }}">
-           &laquo; {{ 'common.pagination.previous' | t }}
+           &laquo; {{ 'general.pagination.previous' | t }}
         </a>
       </li>
     {% endif %}
@@ -25,7 +25,7 @@
     {% if paginate.next %}
       <li>
         <a href="{{ paginate.next.url }}">
-          {{ 'common.pagination.next' | t }} &raquo;
+          {{ 'general.pagination.next' | t }} &raquo;
         </a>
       </li>
     {% endif %}
