--- a/src/snippets/responsive-image.liquid
+++ b/src/snippets/responsive-image.liquid
@@ -10,6 +10,8 @@
 
     Accepts:
     - image: {Object} Image object
+    - width: A fixed width option
+    - ratio: Image cropping tool using decimal percentages
     - max_width: {Number} Max width of the image container
     - max_height: {Number} Max height of the image container
     - img_class: {String} class name of the <img />
@@ -50,10 +52,21 @@
   #ImageWrapper-{{ image.id }}-{{ responsive_image_counter }}::before {
     {%- comment -%}
       When you change the window screen width, we want to make sure that the container's size is proportionally calculated.
-      Note regarding padding percentage: The percentage is calculated with respect to the width of the generated box's containing block (source: http://www.w3.org/TR/2011/REC-CSS2-20110607/box.html#padding-properties)
+      Note regarding padding percentage: The percentage is calculated with respect to the width of the generated box's containing block
+      source: http://www.w3.org/TR/2011/REC-CSS2-20110607/box.html#padding-properties
     {%- endcomment -%}
-    padding-top:{{ max_height_image | divided_by: max_width_image | times: 100}}%;
+    padding-top: {% if ratio -%}
+                   {{ ratio | times: 100}}%
+                 {%- else -%}
+                   {{ max_height_image | divided_by: max_width_image | times: 100}}%
+                 {%- endif %};
   }
+  {% if ratio -%}
+    #ImageWrapper-{{ image.id }}-{{ responsive_image_counter }} img {
+      height: auto;
+      top: -20%;
+    }
+  {%- endif %}
 </style>
 
 {%- assign img_url = image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
