--- a/src/styles/settings/variables.scss.liquid
+++ b/src/styles/settings/variables.scss.liquid
@@ -11,6 +11,7 @@ $colorBorder: $colorAlternate;
 $adjustAmount: 25%;
 
 // Space & Borders
+$columns: 12;
 $spacing: 10px;
 $gutter: $spacing*5;
 $borderRadius: 2px;
