--- a/src/styles/modules/drawer.scss
+++ b/src/styles/modules/drawer.scss
@@ -1,24 +1,24 @@
 /* Toggle Side Menu ==========================================================*/
 
-.theme-nav-toggled {
+.drawer {
   z-index: 9995;
   position: fixed;
   width: 100%;
   max-width: 100%;
   height: 100%;
   padding: $gutter;
-  @include transition-property(); // For legacy support
-  @include prefixer(transition-duration, 0.3s);
+  @include transition();
   @include prefixer(transition-delay, 0.3s);
   &.from-left {
     top: 0;
     left: 0;
+    max-width: $s;
     @include prefixer(transform, translate3d(-100%, 0, 0));
-    max-width: 350px;
   }
   &.from-right {
     top: 0;
     right: 0;
+    max-width: $s;
     @include prefixer(transform, translate3d(100%, 0, 0));
   }
   &.from-bottom {
@@ -31,21 +31,15 @@
   }
   &.visible {
     @include prefixer(transform, translate3d(0, 0, 0));
+    @include prefixer(transition-delay, 0s);
     overflow: auto;
     -webkit-overflow-scrolling: touch;
   }
 
-  // Demo styling
-  background-color: $colorText;
-  color: $colorBackground;
-  a {
-    color: $colorBackground;
-  }
-  .nav-toggled-close {
+  .drawer-close {
     display: block;
     position: absolute;
     top: $gutter/2;
     right: $gutter/2;
   }
-  &.from-left, &.from-right { width: 400px; max-width: 90%; }
 }
